fix overflow

--- a/src/pages/ApplicationForm/ApplicationForm.module.scss
+++ b/src/pages/ApplicationForm/ApplicationForm.module.scss
@@ -1,5 +1,7 @@
-html {
+.page {
+  width: 100%;
   overflow-x: hidden;
+  position: relative;
 }
 
 .ellipse {
@@ -16,7 +18,10 @@ html {
     rgba(255, 255, 255, 0.05) 0%,
     rgba(255, 255, 255, 0) 100%
   );
-  z-index: -1;
+
+  pointer-events: none;
+
+  z-index: 0;
 }
 
 .container {
@@ -27,6 +32,29 @@ html {
   margin: 0 auto;
   box-sizing: border-box;
   padding: 40px 24px;
+
+  .backButton {
+    height: 40px;
+    width: 40px;
+    background-color: rgba(white, 0.05);
+    border: none;
+    border-radius: 8px;
+    margin-right: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    margin-top: 40px;
+    transition: 100ms ease;
+
+    &:hover {
+      background-color: rgba(white, 0.1);
+    }
+
+    &:active {
+      background-color: rgba(white, 0.2);
+    }
+  }
 
   h2,
   p {
@@ -40,37 +68,12 @@ html {
     line-height: normal;
     font-size: 32px;
     font-weight: 700;
-    margin-top: 40px;
+    margin-top: 12px;
     margin-bottom: 24px;
   }
 
   p {
     margin-bottom: 8px;
-  }
-
-  .scroller {
-    width: 100%;
-    height: 100%;
-    overflow-y: auto;
-    padding-right: 8px;
-
-    &::-webkit-scrollbar {
-      width: 8px;
-    }
-
-    &::-webkit-scrollbar-thumb {
-      background: rgba(255, 255, 255, 0.1);
-      border-radius: 4px;
-      width: 6px;
-
-      &:hover {
-        background: rgba(255, 255, 255, 0.2);
-      }
-    }
-
-    &::-webkit-scrollbar-track {
-      background: transparent;
-    }
   }
 
   .inputGroup {
